Fix text overflow on mobile devices

--- a/src/pages/Menu.module.scss
+++ b/src/pages/Menu.module.scss
@@ -47,7 +47,7 @@
   color: config.$text;
   border: none;
   font-size: 1.875rem;
-  border-radius: 50%;
+  // border-radius: 50%;
   width: 100px;
   height: 100px;
 }
